--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <link
       rel="icon"
       type="image/png"
@@ -26,28 +26,28 @@
           </p>
         </div>
         <div class="ratings">
-          <div>
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
+          <div class="rating_div" >
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
             <p>Rated 5 Stars in Reviews</p>
           </div>
-          <div>
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
+          <div class="rating_div" >
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-.icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
             <p>Rated 5 Stars in Report Guru</p>
           </div>
-          <div>
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
-            <img src="/images/icons/icon-star.svg" alt="star-icon" />
+          <div class="rating_div" >
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
+            <img src="./images/icons/icon-star.svg" alt="star-icon" />
             <p>Rated 5 Stars in BestTech</p>
           </div>
         </div>
